--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "@expo/webpack-config": "^18.1.2",
     "expo": "^49.0.3",
+    "merkletreejs": "^0.3.10",
     "next": "~13.1.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "wagmi": "^1.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
