--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "expo": "^49.0.3",
     "merkletreejs": "^0.3.10",
     "next": "~13.1.1",
+    "next-pwa": "^5.6.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
