--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@expo/webpack-config": "^18.1.2",
+    "@types/react": "~18.2.14",
     "expo": "^49.0.3",
     "merkletreejs": "^0.3.10",
     "next": "~13.1.1",
